# plant-disease-detector-frontend

./: README.md  build.sh  db.sqlite3  gradio_client_base.py  pyproject.toml  requirements.txt
accounts/: forms.py  urls.py  views.py
accounts/templates/accounts/: login.html  signup.html
plants/: asgi.py  settings.py  urls.py  views.py  wsgi.py
plants/templates/plants/: about.html  base.html  careers.html  error.html  faqs.html  home.html  pricing.html  support.html  videos.html
predictor/: admin.py  forms.py  models.py  urls.py  views.py
predictor/migrations/: 0001_initial.py  0002_alter_image_image_alter_image_name.py  0003_alter_image_image.py  0004_secret.py
predictor/templates/predictor/: predict.html  result.html  select.html
static/css/: style.css
